Исправила обработку комбинаций и валидацию доски