@@ -6,69 +6,49 @@ import java.util.concurrent.ConcurrentHashMap;
 
 
 public class CombinationsPoker {
+
     private static final Map<String, HandPlayer> combinationCache = new ConcurrentHashMap<>();
 
     public static HandPlayer evaluateCombination(List<Card> cards) {
         validateCards(cards);
-
+        String key = generateCacheKey(cards);
+        if (combinationCache.containsKey(key)) {
+            return combinationCache.get(key);
+        }
         List<Card> sortedCards = cards.stream()
                 .sorted(Comparator.comparingInt(Card::getRankValue).reversed())
                 .toList();
 
+
+        HandPlayer bestCombination;
+
         if (RoyalFlush(sortedCards)) {
-            return new HandPlayer(Priority.ROYAL_FLUSH, getRoyalFlushCards(sortedCards));
-        }
-        if (StraightFlush(sortedCards)) {
-            List<Card> straightFlushCards = getStraightFlushCards(sortedCards);
-            if (!straightFlushCards.isEmpty()) {
-                return new HandPlayer(Priority.STRAIGHT_FLUSH, straightFlushCards);
-            }
-        }
-        if (FourOfAKind(sortedCards)) {
-            List<Card> fourOfAKindCards = getFourOfAKindCards(sortedCards);
-            if (!fourOfAKindCards.isEmpty()) {
-                return new HandPlayer(Priority.FOUR_OF_A_KIND, fourOfAKindCards);
-            }
-        }
-        if (FullHouse(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.ROYAL_FLUSH, getRoyalFlushCards(sortedCards));
+        } else if (StraightFlush(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.STRAIGHT_FLUSH, getStraightFlushCards(sortedCards));
+        } else if (FourOfAKind(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.FOUR_OF_A_KIND, getFourOfAKindCards(sortedCards));
+        } else if (FullHouse(sortedCards)) {
             List<Card> fullHouseCards = getFullHouseCards(sortedCards);
-            if (!fullHouseCards.isEmpty()) {
-                return new HandPlayer(Priority.FULL_HOUSE, fullHouseCards);
-            }
-        }
-        if (Flush(sortedCards)) {
-            List<Card> flushCards = getFlushCards(sortedCards);
-            if (!flushCards.isEmpty()) {
-                return new HandPlayer(Priority.FLUSH, flushCards);
-            }
-        }
-        if (Straight(sortedCards)) {
-            List<Card> straightCards = getStraightCards(sortedCards);
-            if (!straightCards.isEmpty()) {
-                return new HandPlayer(Priority.STRAIGHT, straightCards);
-            }
-        }
-        if (ThreeOfAKind(sortedCards)) {
-            List<Card> threeOfAKindCards = getThreeOfAKindCards(sortedCards);
-            if (!threeOfAKindCards.isEmpty()) {
-                return new HandPlayer(Priority.THREE_OF_A_KIND, threeOfAKindCards);
-            }
-        }
-        if (TwoPair(sortedCards)) {
-            List<Card> twoPairCards = getTwoPairCards(sortedCards);
-            if (!twoPairCards.isEmpty()) {
-                return new HandPlayer(Priority.TWO_PAIR, twoPairCards);
-            }
-        }
-        if (OnePair(sortedCards)) {
-            List<Card> onePairCards = getOnePairCards(sortedCards);
-            if (!onePairCards.isEmpty()) {
-                return new HandPlayer(Priority.ONE_PAIR, onePairCards);
-            }
+            bestCombination = !fullHouseCards.isEmpty()
+                    ? new HandPlayer(Priority.FULL_HOUSE, fullHouseCards)
+                    : null;
+        } else if (Flush(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.FLUSH, getFlushCards(sortedCards));
+        } else if (Straight(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.STRAIGHT, getStraightCards(sortedCards));
+        } else if (ThreeOfAKind(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.THREE_OF_A_KIND, getThreeOfAKindCards(sortedCards));
+        } else if (TwoPair(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.TWO_PAIR, getTwoPairCards(sortedCards));
+        } else if (OnePair(sortedCards)) {
+            bestCombination = new HandPlayer(Priority.ONE_PAIR, getOnePairCards(sortedCards));
+        } else {
+            bestCombination = new HandPlayer(Priority.HIGH_CARD, getHighCard(sortedCards));
         }
 
-        // Если ни одна комбинация не подошла, возвращаем старшую карту
-        return new HandPlayer(Priority.HIGH_CARD, getHighCard(sortedCards));
+        combinationCache.put(key, bestCombination);
+        return bestCombination;
     }
 
     private static void validateCards(List<Card> cards) {
@@ -98,18 +78,22 @@ public class CombinationsPoker {
                 .collect(Collectors.joining("_"));
     }
 
-
     private static boolean RoyalFlush(List<Card> cards) {
-        if (!Flush(cards)) {
-            return false; // Royal Flush невозможен без Flush
-        }
+        Map<Suit, List<Card>> suitGroups = cards.stream()
+                .collect(Collectors.groupingBy(Card::getSuit));
 
-        // Проверяем наличие всех карт для Royal Flush
-        Set<Integer> royalRanks = Set.of(10, 11, 12, 13, 14); // TEN, JACK, QUEEN, KING, ACE
-        return cards.stream()
-                .map(Card::getRankValue)
-                .collect(Collectors.toSet())
-                .containsAll(royalRanks);
+        for (List<Card> suitedCards : suitGroups.values()) {
+            if (suitedCards.size() >= 5) {
+                Set<Integer> royalRanks = Set.of(10, 11, 12, 13, 14); // TEN, JACK, QUEEN, KING, ACE
+                Set<Integer> cardRanks = suitedCards.stream()
+                        .map(Card::getRankValue)
+                        .collect(Collectors.toSet());
+                if (cardRanks.containsAll(royalRanks)) {
+                    return true;
+                }
+            }
+        }
+        return false;
     }
 
     private static List<Card> getRoyalFlushCards(List<Card> cards) {
@@ -134,36 +118,53 @@ public class CombinationsPoker {
     }
 
     private static boolean StraightFlush(List<Card> cards) {
-        if (!Flush(cards)) {
-            return false; // Straight Flush невозможен без Flush
-        }
-
-
-        // Оставляем только карты одной масти
-        Map<Suit, List<Card>> suitGroups = cards.stream()
-                .collect(Collectors.groupingBy(Card::getSuit));
-        for (List<Card> suitedCards : suitGroups.values()) {
-            if (suitedCards.size() >= 5 && Straight(suitedCards)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static List<Card> getStraightFlushCards(List<Card> cards) {
-
         Map<Suit, List<Card>> suitGroups = cards.stream()
                 .collect(Collectors.groupingBy(Card::getSuit));
 
         for (List<Card> suitedCards : suitGroups.values()) {
             if (suitedCards.size() >= 5) {
                 List<Card> sortedSuitedCards = suitedCards.stream()
-                        .sorted(Comparator.comparingInt(Card::getRankValue).reversed())
+                        .sorted(Comparator.comparingInt(Card::getRankValue))
                         .toList();
 
                 List<Card> straightFlush = findStraightSequence(sortedSuitedCards);
-                if (!straightFlush.isEmpty()) {
-                    return straightFlush;
+
+                if (straightFlush.size() == 5) {
+                    // Проверяем, не является ли это Royal Flush
+                    Set<Integer> royalRanks = Set.of(10, 11, 12, 13, 14);
+                    Set<Integer> straightRanks = straightFlush.stream()
+                            .map(Card::getRankValue)
+                            .collect(Collectors.toSet());
+                    if (!straightRanks.containsAll(royalRanks)) {
+                        return true;
+                    }
+                }
+            }
+        }
+        return false;
+    }
+
+    private static List<Card> getStraightFlushCards(List<Card> cards) {
+        Map<Suit, List<Card>> suitGroups = cards.stream()
+                .collect(Collectors.groupingBy(Card::getSuit));
+
+        for (List<Card> suitedCards : suitGroups.values()) {
+            if (suitedCards.size() >= 5) {
+                List<Card> sortedSuitedCards = suitedCards.stream()
+                        .sorted(Comparator.comparingInt(Card::getRankValue))
+                        .toList();
+
+                List<Card> straightFlush = findStraightSequence(sortedSuitedCards);
+
+                if (straightFlush.size() == 5) {
+                    // Проверяем, не является ли это Royal Flush
+                    Set<Integer> royalRanks = Set.of(10, 11, 12, 13, 14);
+                    Set<Integer> straightRanks = straightFlush.stream()
+                            .map(Card::getRankValue)
+                            .collect(Collectors.toSet());
+                    if (!straightRanks.containsAll(royalRanks)) {
+                        return straightFlush;
+                    }
                 }
             }
         }
@@ -230,8 +231,8 @@ public class CombinationsPoker {
 
     private static boolean Straight(List<Card> cards) {
         List<Card> sortedCards = cards.stream()
+                .distinct()
                 .sorted(Comparator.comparingInt(Card::getRankValue))
-                .distinct() // Убираем дубли
                 .toList();
 
         int consecutiveCount = 1;
@@ -242,30 +243,36 @@ public class CombinationsPoker {
                     return true;
                 }
             } else {
-                consecutiveCount = 1; // Сброс счетчика, если последовательность прерывается
+                consecutiveCount = 1;
             }
         }
 
-        // Проверка на низкий стрит (A-2-3-4-5)
-        if (sortedCards.size() >= 5 &&
+        // Проверка на A-2-3-4-5 (low straight)
+        return sortedCards.size() >= 5 &&
                 sortedCards.get(0).getRankValue() == 2 &&
-                sortedCards.get(sortedCards.size() - 1).getRankValue() == 14) {
-            return true;
-        }
-        return false;
+                sortedCards.get(sortedCards.size() - 1).getRankValue() == 14;
     }
 
     private static List<Card> getStraightCards(List<Card> cards) {
         List<Card> sortedCards = cards.stream()
-                .sorted(Comparator.comparingInt(Card::getRankValue))
                 .distinct()
-                .toList();
+                .sorted(Comparator.comparingInt(Card::getRankValue))
+                .collect(Collectors.toList());
 
         List<Card> straight = findStraightSequence(sortedCards);
-        if (!straight.isEmpty()) {
-        } else {
+        if (straight.size() == 5) {
+            return straight;
         }
-        return straight;
+
+        if (sortedCards.size() >= 5 &&
+                sortedCards.get(0).getRankValue() == 2 &&
+                sortedCards.get(sortedCards.size() - 1).getRankValue() == 14) {
+            return sortedCards.stream()
+                    .filter(card -> card.getRankValue() == 14 || card.getRankValue() <= 5)
+                    .sorted(Comparator.comparingInt(Card::getRankValue))
+                    .collect(Collectors.toList());
+        }
+        return Collections.emptyList();
     }
 
     private static boolean FourOfAKind(List<Card> cards) {
@@ -357,30 +364,30 @@ public class CombinationsPoker {
     }
 
     private static boolean OnePair(List<Card> cards) {
-        // Группируем карты по рангу и проверяем наличие хотя бы одной группы с двумя одинаковыми картами
         return cards.stream()
-                .collect(Collectors.groupingBy(Card::getRankValue, Collectors.counting()))
+                .collect(Collectors.groupingBy(Card::getRankValue))
                 .values().stream()
-                .anyMatch(count -> count == 2);
+                .anyMatch(group -> group.size() == 2);
     }
-        private static List<Card> getOnePairCards (List < Card > cards) {
-            Map<Integer, List<Card>> rankGroups = cards.stream()
-                    .collect(Collectors.groupingBy(Card::getRankValue));
 
-            for (Map.Entry<Integer, List<Card>> entry : rankGroups.entrySet()) {
-                if (entry.getValue().size() == 2) {
-                    List<Card> onePair = new ArrayList<>(entry.getValue());
-                    List<Card> kickers = cards.stream()
-                            .filter(card -> card.getRankValue() != entry.getKey())
-                            .sorted(Comparator.comparingInt(Card::getRankValue).reversed())
-                            .limit(3)
-                            .toList();
-                    onePair.addAll(kickers);
-                    return onePair;
-                }
+    private static List<Card> getOnePairCards(List<Card> cards) {
+        Map<Integer, List<Card>> rankGroups = cards.stream()
+                .collect(Collectors.groupingBy(Card::getRankValue));
+
+        for (Map.Entry<Integer, List<Card>> entry : rankGroups.entrySet()) {
+            if (entry.getValue().size() == 2) {
+                List<Card> onePair = new ArrayList<>(entry.getValue());
+                List<Card> kickers = cards.stream()
+                        .filter(card -> card.getRankValue() != entry.getKey())
+                        .sorted(Comparator.comparingInt(Card::getRankValue).reversed())
+                        .limit(3)
+                        .toList();
+                onePair.addAll(kickers);
+                return onePair;
             }
-            return Collections.emptyList();
         }
+        return Collections.emptyList();
+    }
 
     private static List<Card> getHighCard(List<Card> cards) {
         return cards.stream()
@@ -391,22 +398,24 @@ public class CombinationsPoker {
 
     private static List<Card> findStraightSequence(List<Card> sortedCards) {
         List<Card> straight = new ArrayList<>();
+        int previousRank = -1;
 
-        for (int i = 0; i < sortedCards.size(); i++) {
-            if (straight.isEmpty() || sortedCards.get(i).getRankValue() == straight.get(straight.size() - 1).getRankValue() + 1) {
-                straight.add(sortedCards.get(i));
+        for (Card card : sortedCards) {
+            if (straight.isEmpty() || card.getRankValue() == previousRank + 1) {
+                straight.add(card);
                 if (straight.size() == 5) {
                     return straight;
                 }
-            } else if (sortedCards.get(i).getRankValue() != straight.get(straight.size() - 1).getRankValue()) {
+            } else if (card.getRankValue() != previousRank) {
                 straight.clear();
-                straight.add(sortedCards.get(i));
+                straight.add(card);
             }
+            previousRank = card.getRankValue();
         }
 
-        // Проверка на случай A-2-3-4-5 (low straight)
-        if (straight.size() == 4 && straight.get(0).getRankValue() == 2 &&
-                sortedCards.get(sortedCards.size() - 1).getRankValue() == 14) {
+        // Проверка на низкий стрит (A-2-3-4-5)
+        if (straight.size() == 4 && straight.get(0).getRankValue() == 14 &&
+                sortedCards.get(sortedCards.size() - 1).getRankValue() == 2) {
             straight.add(sortedCards.get(sortedCards.size() - 1));
             return straight;
         }
